tools/lr/internal/parser/yacc/grammar.output

state 0
	$accept: .grammar $end 

	TOKEN  shift 7
	TYPE  shift 8
	START  shift 5
	RULE_DEF  shift 9
	.  error

	rword  goto 4
	def  goto 3
	defs  goto 2
	rule  goto 6
	grammar  goto 1

state 1
	$accept:  grammar.$end 

	$end  accept
	.  error


state 2
	grammar:  defs.additional_sections 
	defs:  defs.def 
	defs:  defs.def ';' 
	additional_sections: .    (3)

	TOKEN  shift 7
	TYPE  shift 8
	START  shift 5
	RULE_DEF  shift 9
	.  reduce 3 (src line 84)

	rword  goto 4
	def  goto 11
	rule  goto 6
	additional_sections  goto 10

state 3
	defs:  def.    (7)
	defs:  def.';' 

	';'  shift 12
	.  reduce 7 (src line 104)


4: shift/reduce conflict (shift 16(0), red'n 22(0)) on IDENTIFIER
4: shift/reduce conflict (shift 17(0), red'n 22(0)) on CHARACTER
state 4
	def:  rword.'<' IDENTIFIER '>' nonempty_id_or_char_list 
	def:  rword.nonempty_id_or_char_list 
	id_or_char_list: .    (22)

	IDENTIFIER  shift 16
	CHARACTER  shift 17
	'<'  shift 13
	.  error

	nonempty_id_or_char_list  goto 14
	id_or_char_list  goto 15

state 5
	def:  START.nonempty_ident_list 

	IDENTIFIER  shift 19
	.  error

	nonempty_ident_list  goto 18

state 6
	def:  rule.    (12)

	.  reduce 12 (src line 129)


state 7
	rword:  TOKEN.    (13)

	.  reduce 13 (src line 134)


state 8
	rword:  TYPE.    (14)

	.  reduce 14 (src line 138)


9: shift/reduce conflict (shift 16(0), red'n 22(0)) on IDENTIFIER
9: shift/reduce conflict (shift 17(0), red'n 22(0)) on CHARACTER
state 9
	rule:  RULE_DEF.clauses 
	id_or_char_list: .    (22)

	LABEL  shift 23
	IDENTIFIER  shift 16
	CHARACTER  shift 17
	.  reduce 22 (src line 176)

	nonempty_id_or_char_list  goto 24
	id_or_char_list  goto 22
	clause  goto 21
	clauses  goto 20

state 10
	grammar:  defs additional_sections.    (1)
	additional_sections:  additional_sections.additional_section 

	SECTION_MARKER  shift 26
	.  reduce 1 (src line 74)

	additional_section  goto 25

state 11
	defs:  defs def.    (5)
	defs:  defs def.';' 

	';'  shift 27
	.  reduce 5 (src line 96)


state 12
	defs:  def ';'.    (8)

	.  reduce 8 (src line 108)


state 13
	def:  rword '<'.IDENTIFIER '>' nonempty_id_or_char_list 

	IDENTIFIER  shift 28
	.  error


state 14
	def:  rword nonempty_id_or_char_list.    (10)
	id_or_char_list:  nonempty_id_or_char_list.    (21)

	IDENTIFIER  reduce 21 (src line 172)
	CHARACTER  reduce 21 (src line 172)
	.  reduce 10 (src line 120)


state 15
	nonempty_id_or_char_list:  id_or_char_list.IDENTIFIER 
	nonempty_id_or_char_list:  id_or_char_list.CHARACTER 

	IDENTIFIER  shift 29
	CHARACTER  shift 30
	.  error


state 16
	nonempty_id_or_char_list:  IDENTIFIER.    (19)

	.  reduce 19 (src line 162)


state 17
	nonempty_id_or_char_list:  CHARACTER.    (20)

	.  reduce 20 (src line 166)


state 18
	def:  START nonempty_ident_list.    (11)
	nonempty_ident_list:  nonempty_ident_list.IDENTIFIER 

	IDENTIFIER  shift 31
	.  reduce 11 (src line 124)


state 19
	nonempty_ident_list:  IDENTIFIER.    (16)

	.  reduce 16 (src line 148)


state 20
	rule:  RULE_DEF clauses.    (23)
	clauses:  clauses.'|' clause 

	'|'  shift 32
	.  reduce 23 (src line 181)


state 21
	clauses:  clause.    (27)

	.  reduce 27 (src line 205)


state 22
	nonempty_id_or_char_list:  id_or_char_list.IDENTIFIER 
	nonempty_id_or_char_list:  id_or_char_list.CHARACTER 
	clause:  id_or_char_list.    (24)

	IDENTIFIER  shift 29
	CHARACTER  shift 30
	.  reduce 24 (src line 191)


23: shift/reduce conflict (shift 16(0), red'n 22(0)) on IDENTIFIER
23: shift/reduce conflict (shift 17(0), red'n 22(0)) on CHARACTER
state 23
	clause:  LABEL.id_or_char_list 
	id_or_char_list: .    (22)

	IDENTIFIER  shift 16
	CHARACTER  shift 17
	.  reduce 22 (src line 176)

	nonempty_id_or_char_list  goto 24
	id_or_char_list  goto 33

state 24
	id_or_char_list:  nonempty_id_or_char_list.    (21)

	.  reduce 21 (src line 172)


state 25
	additional_sections:  additional_sections additional_section.    (2)

	.  reduce 2 (src line 80)


state 26
	additional_section:  SECTION_MARKER.IDENTIFIER SECTION_CONTENT 

	IDENTIFIER  shift 34
	.  error


state 27
	defs:  defs def ';'.    (6)

	.  reduce 6 (src line 100)


state 28
	def:  rword '<' IDENTIFIER.'>' nonempty_id_or_char_list 

	'>'  shift 35
	.  error


state 29
	nonempty_id_or_char_list:  id_or_char_list IDENTIFIER.    (17)

	.  reduce 17 (src line 154)


state 30
	nonempty_id_or_char_list:  id_or_char_list CHARACTER.    (18)

	.  reduce 18 (src line 158)


state 31
	nonempty_ident_list:  nonempty_ident_list IDENTIFIER.    (15)

	.  reduce 15 (src line 144)


32: shift/reduce conflict (shift 16(0), red'n 22(0)) on IDENTIFIER
32: shift/reduce conflict (shift 17(0), red'n 22(0)) on CHARACTER
state 32
	clauses:  clauses '|'.clause 
	id_or_char_list: .    (22)

	LABEL  shift 23
	IDENTIFIER  shift 16
	CHARACTER  shift 17
	.  reduce 22 (src line 176)

	nonempty_id_or_char_list  goto 24
	id_or_char_list  goto 22
	clause  goto 36

state 33
	nonempty_id_or_char_list:  id_or_char_list.IDENTIFIER 
	nonempty_id_or_char_list:  id_or_char_list.CHARACTER 
	clause:  LABEL id_or_char_list.    (25)

	IDENTIFIER  shift 29
	CHARACTER  shift 30
	.  reduce 25 (src line 195)


state 34
	additional_section:  SECTION_MARKER IDENTIFIER.SECTION_CONTENT 

	SECTION_CONTENT  shift 37
	.  error


35: shift/reduce conflict (shift 16(0), red'n 22(0)) on IDENTIFIER
35: shift/reduce conflict (shift 17(0), red'n 22(0)) on CHARACTER
state 35
	def:  rword '<' IDENTIFIER '>'.nonempty_id_or_char_list 
	id_or_char_list: .    (22)

	IDENTIFIER  shift 16
	CHARACTER  shift 17
	.  error

	nonempty_id_or_char_list  goto 38
	id_or_char_list  goto 15

state 36
	clauses:  clauses '|' clause.    (26)

	.  reduce 26 (src line 201)


state 37
	additional_section:  SECTION_MARKER IDENTIFIER SECTION_CONTENT.    (4)

	.  reduce 4 (src line 90)


state 38
	def:  rword '<' IDENTIFIER '>' nonempty_id_or_char_list.    (9)
	id_or_char_list:  nonempty_id_or_char_list.    (21)

	IDENTIFIER  reduce 21 (src line 172)
	CHARACTER  reduce 21 (src line 172)
	.  reduce 9 (src line 115)


17 terminals, 13 nonterminals
28 grammar rules, 39/16000 states
10 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 26/240000
0 extra closures
37 shift entries, 5 exceptions
19 goto entries
5 entries saved by goto default
Optimizer space used: output 43/240000
43 table entries, 0 zero
maximum spread: 17, maximum offset: 35
